removed dark mode style, fixed page titles and description

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,7 +39,8 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
-  /*.dark {
+  /*
+  .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
@@ -73,7 +74,8 @@
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
-}*/
+}
+  */
 
 @layer base {
   * {
